src/test/resources/errors/07-error.c
extern int main() {
    float fv;
    double dv;
    int iv = 57;

    dv = fv = iv;

    return 0;
}